# poe-currency-flip-planner

./: .gitignore  .python-version  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  cli.py  config.default.yaml  excluded_traders.txt  out.txt  pyproject.toml  pyrightconfig.json  requirements.txt  run_collector.sh  sorted.txt  sync_server.sh  todo.org
.dependabot/: config.yml
.github/workflows/: python.yml
assets/: items.json  items.pickle  pair_filter.json  poeofficial.json  poetrade.json
config/: config.default.json  config.json  config.yaml
data_analysis/: README.md  analysis.py  collector.py  converter.py  merge.sh
data_analysis/experiments/edge_popularity_per_snapshot/: run.py
data_analysis/experiments/edge_popularity_per_snapshot/data/: delve.csv  hardcore.csv  hc_delve.csv  standard.csv
data_analysis/experiments/edge_popularity_per_snapshot_betrayal/: Edge Popularity Analysis.ipynb  run.py
data_analysis/experiments/edge_popularity_per_snapshot_betrayal/data/: common_profitable_edges.json  edge_popularity.csv
data_analysis/experiments/edge_popularity_per_snapshot_betrayal_bulk/: Edge Popularity Analysis.ipynb  run.py
data_analysis/experiments/edge_popularity_per_snapshot_betrayal_bulk/data/: common_profitable_edges.json  edge_popularity.csv
data_analysis/experiments/edge_popularity_per_snapshot_delve/: Edge Popularity Analysis.ipynb  run.py
data_analysis/experiments/edge_popularity_per_snapshot_delve/data/: common_profitable_edges.json  edge_popularity.csv
data_analysis/price-fixing/: outliers.ipynb
data_analysis/raw/: 2018_05_12_16_33_19.pickle
src/: asset_mgr.py  assets.py  cli.py  commons.py  constants.py  currency.py  flip.py  graph.py  items.py  main.py  pathfinder.py
src/backends/: .#poetrade.py  lib.py  poeofficial.py  poetrade.py
src/commands/: pathfinder.py  sync.py
src/config/: parser.py  user_config.py
src/core/: edge.py  graph.py  offer.py
src/core/backends/: backend_pool.py  poeofficial.py  poetrade.py  task.py  throttler_ensemble.py
src/trading/: __init__.py  items.py  pair_filter.py  stack_sizes.py  stock_sizes.py  vendor_offers.py
tests/: backend_test.py  config_test.py  currency_test.py  flip_test.py  graph_test.py  graph_vendor_test.py  item_test.py
